# TS11

./: CMakeLists.txt  main.cpp
Tester/: AutoTest.cpp  AutoTest.h
algorithm/: Solution.cpp  Solution.h  TabuSearch.cpp  TabuSearch.h
structures/: Graph.cpp  Graph.h  Move.cpp  Move.h  TabuList.cpp  TabuList.h
